# opx-platform-config

./: .gitreview  Makefile.am  README.md  configure.ac
.github/: CODEOWNERS
common-hw/lib/udev/rules.d/: 59-i2c-systemd.rules
common-hw/sbin/: reload
common/etc/: logrotate.conf
common/etc/ld.so.conf.d/: opx.conf
common/etc/logrotate.d/: redis-server  rsyslog
common/etc/modules-load.d/: opx-common.conf
common/etc/opx/: opx-environment  opx-environment.sh
common/etc/opx/media/: yang_values.json
common/etc/opx/media/autoneg/: profiles.json
common/etc/opx/media/autoneg/default/: config.json
common/etc/opx/media/duplex/: profiles.json
common/etc/opx/media/duplex/default/: config.json
common/etc/opx/media/fec/: profiles.json
common/etc/opx/media/fec/default/: config.json
common/etc/opx/media/hardware/default/: config.json
common/etc/opx/startup/: config-interfaces
common/etc/profile.d/: opx.sh
common/lib/systemd/system/: opx-platform-init.service
common/lib/systemd/system-shutdown/: opx_platform_shutdown.sh
common/usr/lib/python2.7/dist-packages/: opx.pth
debian/: changelog  control  opx-platform-config-common.install  opx-platform-config-common.postinst  opx-platform-config-common.prerm  opx-platform-config-dell-s3048.install  opx-platform-config-dell-s4048.install  opx-platform-config-dell-s4048t.install  opx-platform-config-dell-s4112f.install  opx-platform-config-dell-s4112t.install  opx-platform-config-dell-s4128f.install  opx-platform-config-dell-s4128t.install  opx-platform-config-dell-s4148e.install  opx-platform-config-dell-s4148f.install  opx-platform-config-dell-s4148t.install  opx-platform-config-dell-s4248fb.install  opx-platform-config-dell-s4248fbl.install  opx-platform-config-dell-s5148f.install  opx-platform-config-dell-s5212f.install  opx-platform-config-dell-s5224f.install  opx-platform-config-dell-s5232f.install  opx-platform-config-dell-s5248f.install  opx-platform-config-dell-s5296f.install  opx-platform-config-dell-s6000-vm.install  opx-platform-config-dell-s6000.install  opx-platform-config-dell-s6010.install  opx-platform-config-dell-vm.install  opx-platform-config-dell-z9100.install  opx-platform-config-dell-z9264f.install  opx-platform-config-dell-z9264f.links  opx-platform-config-mlnx-sn2410.install  opx-platform-config-mlnx-sn2700.install  rules
dell-s6000-hw/etc/: modules
dell-s6000-hw/etc/modules-load.d/: opx-hw.conf
dell-s6000-hw/etc/opx/sai/: init.xml
dell-s6000-hw/lib/systemd/system-shutdown/: opx_platform_shutdown.sh
dell-s6000-hw/src/: nas_ndi_plat_stat.c
dell-s6000-vm/etc/opx/sdi/: sdi-db-data.sql
dell-s6000-vm/src/: hal_npu_platform_init.c
dell-s6000/etc/opx/nas/: switch.xml
dell/S6000/cfg/: s6k_platform.sh
dell/S6000/cfg/env-tmpctl/: config.json
dell/S6000/cfg/lib/systemd/system-shutdown/: platform_shutdown.sh
dell/S6000/cfg/nas/: base_qos_init.xml  mac_address_alloc.xml
dell/S6000/cfg/pas/: config.xml
dell/S6000/cfg/sdi/: device.xml  entity.xml
dell/S6000/cfg/system-mgmt-interface/: mgmt-intf.xml
