bin_SCRIPTS =	common/bin/pcisysfs.py common/bin/portiocfg.py \
		dell/S6000/cfg/s6k_platform.sh dell/S6000/cfg/lib/systemd/system-shutdown/platform_shutdown.sh

data_env_tmpctldir =	$(sysconfdir)/opx/env-tmpctl
data_env_tmpctl_DATA =	dell/S6000/cfg/env-tmpctl/config.json

data_nasdir =	$(sysconfdir)/opx/nas
data_nas_DATA =	dell/S6000/cfg/nas/base_port_physical_mapping_table.xml dell/S6000/cfg/nas/base_qos_init.xml \
		dell/S6000/cfg/nas/mac_address_alloc.xml dell/S6000/cfg/nas/phy_media_default_npu_setting.xml \
		dell/S6000/cfg/nas/switch.xml

data_pasdir =	$(sysconfdir)/opx/pas
data_pas_DATA =	dell/S6000/cfg/pas/config.xml

data_saidir =	$(sysconfdir)/opx/sai
data_sai_DATA =	dell/S6000/cfg/sai/init.xml

data_sdidir =	$(sysconfdir)/opx/sdi
data_sdi_DATA =	dell/S6000/cfg/sdi/device.xml dell/S6000/cfg/sdi/entity.xml

data_system_mgmt_interfacedir =		$(sysconfdir)/opx/system-mgmt-interface
data_system_mgmt_interface_DATA =	dell/S6000/cfg/system-mgmt-interface/mgmt-intf.xml
